--- a/04kensington/css/style.css
+++ b/04kensington/css/style.css
@@ -45,6 +45,9 @@ body{font-family: 'Open Sans', sans-serif;}
     width: 100%;background: #333333;
     position: relative;
 }
+fieldset{border: 0;}
+input[type="text"]{outline: none;}
+
 .content>ul>li:nth-child(2){
     background: #604584;height: 310px;
     display: flex;justify-content: center;align-items: center;
@@ -222,8 +225,7 @@ body{font-family: 'Open Sans', sans-serif;}
         left: 50%;bottom: 0;transform: translateX(-50%);
     }
     
-    fieldset{border: 0;}
-    input[type="text"]{outline: none;}
+
     .form{
         border-radius: 10px;background: #fff;
         position: absolute;
@@ -247,6 +249,7 @@ body{font-family: 'Open Sans', sans-serif;}
         background: url(../images/rsv_place.png) no-repeat center;
         top:42px;right:-85px;border:0 none;text-indent: -9999px;
     }
+    .mo_hotel{display: none;}
 
     .room input{
         width: 42px;height: 25px;border: 0;outline: none;
@@ -358,6 +361,7 @@ body{font-family: 'Open Sans', sans-serif;}
         float: right;
         width: 351px;height: 222px;
     }
+    .mo_promo{display: none;}
 
     .sec01{
         height: 720px;padding: 74px 200px;
@@ -368,7 +372,7 @@ body{font-family: 'Open Sans', sans-serif;}
         margin-bottom: 80px;
     }
     .sec01_txt{
-        margin: 0 auto;width: 290px;margin-bottom: 107px;
+        margin: 0 auto;width: 290px;margin-bottom: 80px;
     }
     .sec01_txt h4{
         font-weight: 600;font-size: 18px;line-height: 25px;color: #B39579;
@@ -386,7 +390,12 @@ body{font-family: 'Open Sans', sans-serif;}
     .sec01_card{
         display: flex;justify-content: space-between;align-items: center;
     }
-    .sec01_card li{float: left;width: calc(100% / 4);}
+    .sec01_card li{
+        float: left;width: calc( ( 100% - 60px ) / 4 );
+        margin-right: 20px;transition:.3s;cursor:pointer;
+        padding:70px 30px;
+    }
+    .sec01_card li:last-child{margin-right:0;}
     .sec01_card li>img{margin: 0 auto;margin-bottom: 33px;}
     .sec01_cardT h4{
         font-weight: 400;font-size: 26px;text-align: center;margin-bottom: 11px;
@@ -395,6 +404,10 @@ body{font-family: 'Open Sans', sans-serif;}
     .sec01_cardT p{
         font-weight: 400;font-size: 18px;line-height: 26px;
         text-align: center;letter-spacing: -0.095em;color: #FFFFFF;
+    }
+    .sec01_card li:hover{
+        box-shadow:5px 5px 10px rgba(0,0,0,0.5);
+        transform:translate(0,-15px)
     }
 
     .sec02{
@@ -549,7 +562,7 @@ body{font-family: 'Open Sans', sans-serif;}
 
 /* mobile */
 @media screen and ( max-width:699px ){
-    #main_header{background: pink;}
+    #main_header{}
     #header_top{
         padding: 0 20px;z-index: 99999;
         position: fixed;width: 100%;
@@ -672,24 +685,100 @@ body{font-family: 'Open Sans', sans-serif;}
     }
 
     .content{width: 100%;padding: 20px;}
-    .content>ul>li{width: 50%;order: 9;}
+    .content>ul>li{width:50%;order: 9;}
 
     .content>ul>li:nth-child(2){
         order:1;background: rgba(96, 69, 132, 0.8);border-radius: 10px;
+        margin-bottom: 20px;
         /* width: 150px;height: 150px; */
     }
-    .content>ul>li:nth-child(4){order:2;}
+    .content>ul>li:nth-child(4){
+        order:2;border-radius: 10px;background: rgba(179, 149, 121, 0.8);
+        display: flex;justify-content: center;
+        align-items: center;flex-direction: column;
+    }
+    .mo_promo{width: 150px;height: 150px;}
     .content>ul>li:nth-child(8){
         order:3;position: static;border-radius: 10px;background: rgba(228, 199, 84, 0.8);
+        margin-bottom: 20px;
         /* width: 150px;height: 150px; */
     }
     .content>ul>li:nth-child(7){
         order:4;border-radius: 10px;background: rgba(251, 63, 125, 0.8);
         /* width: 150px;height: 150px; */
     }
-    .content>ul>li:nth-child(6){order:5;width: 100%;}
+    .content>ul>li:nth-child(6){order:5;width: 100%;border-radius: 10px;}
+    .content>ul>li:nth-child(6)>.con1_6{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        height: 100%;
+    }
+    .con_loca{
+        font-size: 20px;line-height: 23px;letter-spacing: -0.03em;
+        color: #fff;text-align: center;
+    }
+    .mo_location{margin-bottom: 20px;}
 
-    .content>ul>li:nth-child(1),
+    .content>ul>li:nth-child(1){
+        order: -1;
+        position: absolute;top: 50%;left: 0;
+        background: none;height: 220px;
+    }
+    .form{
+        border-radius: 10px;background: rgba(0, 0, 0, 0.6);
+        height: 100%;border-radius: 10px;margin: 20px;padding: 20px;
+    }
+    .form div{position: relative;}
+    .hotel,.checkin,.room{margin-bottom: 20px;}
+    .hotel{position: relative;}
+    .hotel label,.checkin label,.room label{
+        font-weight: 600;font-size: 14px;
+        line-height: 19px;letter-spacing: -0.025em;color: #FFFFFF;
+    }
+    .pc_hotel,.hotel label{display: none;}
+    .mo_hotel{
+        font-weight: 600;font-size: 14px;text-indent: 20px;
+        line-height: 19px;background: none;border: 0;color: #FFFFFF;
+        position: relative;border-bottom: 1px solid #fff;
+    }
+    .mo_hotel::placeholder{color: #FFFFFF;text-indent: 80px;}
+
+    .hotel_btn{
+        display: block;position: absolute;
+        width: 13px;height: 16px;
+        background: url(../images/mo_rsv_location.png) no-repeat center;
+        top:4px;left:0px;border:0 none;text-indent: -9999px;
+    }
+
+    .checkin{width: 188px;border-bottom: 1px solid #fff;text-indent: 80px;}
+    .checkin label{width: 188px;}
+    .check_calendar{
+        background: url(../images/mo_rsv_calendar.png) no-repeat center;
+        border: 0;width: 18px;height: 16px;
+        position: absolute;left: 0;top: 4px;
+    }
+    .room input{
+        width: 23px;height: 19px;border: 0;outline: none;background: none;
+        font-weight: normal;font-size: 14px;line-height: 19px;color: #fff;
+        background: url(../images/room_under.png) no-repeat right;margin-left: 10px;
+    }
+    .room>div{
+        margin-right: 16px;float: left;margin-bottom: 20px;
+        border-bottom: 1px solid #fff;
+    }
+    .mo_room::placeholder{color: #FFFFFF;}
+    .btn_rsv{
+        width: 100%;height: 45px;background: #B39579;
+        border: 0;border-radius: 10px;
+        font-weight: 600;font-size: 16px;line-height: 22px;color: #FFFFFF;
+        cursor: pointer;
+    }
+
+    .dining,.promotion,.rsvQ,.slider02Wrap{display: none;}
+    /* .form label{display: block;position: absolute;left: 0;top: -9999px;} */
+
     .content>ul>li:nth-child(3),
     .content>ul>li:nth-child(5),
     .content>ul>li:nth-child(9){display: none;}
@@ -711,10 +800,10 @@ body{font-family: 'Open Sans', sans-serif;}
         background-repeat: no-repeat;
         background-position:center;
         background-size:cover;
-        margin-bottom: 20px;
+        margin-bottom: 30px;
     }
     .sec01_txt{
-        margin: 0 auto;width: 156px;margin-bottom: 45px;
+        margin: 0 auto;width: 156px;margin-bottom: 65px;
     }
     .sec01_txt h4{
         font-weight: 600;font-size: 14px;line-height: 19px;color: #B39579;
@@ -730,7 +819,7 @@ body{font-family: 'Open Sans', sans-serif;}
         line-height: 33px;color: #FFFFFF;text-align: center;
     }
     .sec01_card{width: 100%;height: 100%;}
-    .sec01_card li{float: left;width: 50%;}
+    .sec01_card li{float: left;width: 50%;transition:.3s;cursor:pointer}
     .sec01_card li:nth-child(3),.sec01_card li:nth-child(4){padding-top: 50px;}
     .sec01_card li>img{margin: 0 auto;margin-bottom: 15px;width: 50px;height: 50px;}
     .sec01_cardT h4{
@@ -741,8 +830,12 @@ body{font-family: 'Open Sans', sans-serif;}
         font-weight: 400;font-size: 14px;line-height: 20px;
         text-align: center;letter-spacing: -0.095em;color: #FFFFFF;
     }
+    .sec01_card li:hover{
+        /* box-shadow:5px 5px 10px rgba(0,0,0,0.5); */
+        transform:translate(0,-15px)
+    }
 
-    .sec02{margin-bottom: 20px;}
+    .sec02{margin-bottom: 30px;}
     .sec02_txt h2{
         background: url(../images/artro_logo.png) no-repeat center;
         background-size: cover;position: relative;
@@ -804,7 +897,8 @@ body{font-family: 'Open Sans', sans-serif;}
         background-image: url(../images/mo_cruise_bg.png);
         background-repeat: no-repeat;
         background-position: center;
-        background-size: cover;height: 70px;margin-bottom: 20px;
+        background-size: cover;
+        height: 100px;margin-bottom: 20px;padding: 15px 0;
     }
     .sec04_b1 h2{
         background-image: url(../images/mo_cruise_logo.png);
@@ -822,7 +916,7 @@ body{font-family: 'Open Sans', sans-serif;}
     .magazine>h4{
         font-weight: 600;font-size: 18px;position: relative;
         line-height: 25px;color: #333333;
-        text-align: center;margin-bottom: 21px;
+        text-align: center;margin-bottom: 30px;
     }
     .magazine>h4:after{
         content: "";display: block;
@@ -860,7 +954,7 @@ body{font-family: 'Open Sans', sans-serif;}
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
-        height: 70px;margin-bottom: 20px;
+        height: 100px;margin-bottom: 20px;padding: 15px 0;
     }
     .sec04_b2 h2{
         background-image: url(../images/mo_bears_logo.png);
@@ -871,7 +965,7 @@ body{font-family: 'Open Sans', sans-serif;}
         margin: 0 auto;
     }
     .sec04_b2 h2>a{
-        text-indent: -9999px;display: block;text-align: center;height: 70px;
+        text-indent: -9999px;display: block;text-align: center;
     }
 
     .foot_right .sns_wrap{display: none;}
