--- a/company/css/style.css
+++ b/company/css/style.css
@@ -86,6 +86,32 @@ html,body{height: 100%;}
         left: 50%;transform: translateX(-50%);bottom: 0;
     }
 
+    .container{
+        background: url(../images/contentsbg01.jpg) no-repeat center fixed;
+        background-size: cover;
+        padding: 60px 0;
+    }
+    .container .section{width: 1240px;margin: 0 auto;color:white;}
+    .container .section h4{text-align: center;}
+    .container .section h4:after{
+        content:"";display: block;width: 50px;height: 1px;background: #fff;
+        margin: 20px auto;
+    }
+    .container .section>p{text-align: center;font-size: 2em;margin-bottom: 2em;}
+    .container .vision li{float: left;width: calc( ( 100% - 60px ) / 4 );margin-right: 20px;}
+    .container .vision li:last-child{margin-right:0;}
+    
+    .container .vision li{
+        padding:70px 30px;_background:#fff;border-radius:10px;border: 5px solid #ddd;
+        transition:.3s;cursor:pointer
+    }
+    .container .vision li img{margin: 0 auto;margin-bottom: 30px;}
+    .container .vision li .card_body{padding: 5px;text-align: center;color:#000}
+    .container .vision li .card_body h3{margin-bottom:20px;}
+    .container .vision li:hover{
+        box-shadow:5px 5px 10px rgba(0,0,0,0.5);
+        transform:translate(0,-15px)
+    }
 
 }/* pc media end */
 
