--- a/04kensington/css/style.css
+++ b/04kensington/css/style.css
@@ -819,7 +819,7 @@ input[type="text"]{outline: none;}
         line-height: 33px;color: #FFFFFF;text-align: center;
     }
     .sec01_card{width: 100%;height: 100%;}
-    .sec01_card li{float: left;width: 50%;transition:.3s;cursor:pointer}
+    .sec01_card li{float: left;width: 50%;cursor:pointer}
     .sec01_card li:nth-child(3),.sec01_card li:nth-child(4){padding-top: 50px;}
     .sec01_card li>img{margin: 0 auto;margin-bottom: 15px;width: 50px;height: 50px;}
     .sec01_cardT h4{
@@ -829,10 +829,6 @@ input[type="text"]{outline: none;}
     .sec01_cardT p{
         font-weight: 400;font-size: 14px;line-height: 20px;
         text-align: center;letter-spacing: -0.095em;color: #FFFFFF;
-    }
-    .sec01_card li:hover{
-        /* box-shadow:5px 5px 10px rgba(0,0,0,0.5); */
-        transform:translate(0,-15px)
     }
 
     .sec02{margin-bottom: 30px;}
