--- a/04kensington/css/style.css
+++ b/04kensington/css/style.css
@@ -150,11 +150,11 @@ input[type="text"]{outline: none;}
     }
     .headerWrap{
         width: 100%;height: 90px;z-index: 2;
-        position: fixed;top: 20px;
+        position: fixed;top:0; transition: 0.3s;
         _background: #fff;
     }
     #header_top{
-        width: 1240px;height: 50px;z-index: 2;
+        width: 1240px;height: 50px;z-index: 2; transition: 0.3s;
         position: fixed;left: 50%;transform: translateX(-50%);top: 40px;
         display: flex;justify-content: space-between;align-items: center;
     }
@@ -365,6 +365,9 @@ input[type="text"]{outline: none;}
         position: absolute;top: 6px;right: 25px;
     }
     .mo_location{display: none;}
+
+    .content ul>li .img01{transition: 0.3s;}
+    .content ul>li .img01:hover{transform: scale(1.1);}
 
     .slider02Wrap{position: relative;}
     .slider02Wrap .slider02{position: relative;}
@@ -702,8 +705,12 @@ input[type="text"]{outline: none;}
 /* mobile */
 @media screen and ( max-width:699px ){
     #main_header{}
+    #main_header .headerWrap{
+        position: fixed;width: 100%;
+        z-index: 2;height: 54px;
+    }
     #header_top{
-        padding: 0 20px;z-index: 99999;
+        padding: 0 20px;z-index: 2;
         position: fixed;width: 100%;
         display: flex;justify-content:space-between;align-items: center;
     }
