--- a/04kensington/css/style.css
+++ b/04kensington/css/style.css
@@ -709,19 +709,19 @@ input[type="text"]{outline: none;}
         position: fixed;width: 100%;
         z-index: 2;height: 54px;
     }
-    #header_top{
+    .header_top{
         padding: 0 20px;z-index: 2;
         position: fixed;width: 100%;
         display: flex;justify-content:space-between;align-items: center;
     }
-    #header_top .logo{
+    .header_top .logo{
         background-image: url(../images/mobile_main_logo.png);
         width: 140px;height: 24px;margin: 15px 0;
     }
-    #header_top .logo a{
+    .header_top .logo a{
         text-indent:9999px;display: block;
     }
-    #header_top .gnb{
+    .header_top .gnb{
         position: fixed;width: 100%;height: 100%;
         background-image: url(../images/mo_menu_bg.png);
         background-repeat: no-repeat;
@@ -730,7 +730,7 @@ input[type="text"]{outline: none;}
         top: 0;left: -100%;
         transition: 0.3s;z-index: 1;
     }
-    #header_top .gnb.view{left: 0;}
+    .header_top .gnb.view{left: 0;}
     .gnb .submenu{
         text-align: center;position: absolute;
         top:50%;left: 50%;transform: translate(-50%,-50%);
