--- a/04kensington/css/style.css
+++ b/04kensington/css/style.css
@@ -151,11 +151,10 @@ input[type="text"]{outline: none;}
     .headerWrap{
         width: 100%;height: 90px;z-index: 2;
         position: fixed;top:0; transition: 0.3s;
-        _background: #fff;
     }
     #header_top{
-        width: 1240px;height: 50px;z-index: 2; transition: 0.3s;
-        position: fixed;left: 50%;transform: translateX(-50%);top: 40px;
+        width: 1240px;height: 90px;z-index: 2; transition: 0.3s;
+        position: fixed;left: 50%;transform: translateX(-50%);top: 20px;
         display: flex;justify-content: space-between;align-items: center;
     }
     .toggle{display: none;}
@@ -705,23 +704,24 @@ input[type="text"]{outline: none;}
 /* mobile */
 @media screen and ( max-width:699px ){
     #main_header{}
+
     #main_header .headerWrap{
         position: fixed;width: 100%;
         z-index: 2;height: 54px;
     }
-    .header_top{
+    #header_top{
         padding: 0 20px;z-index: 2;
         position: fixed;width: 100%;
         display: flex;justify-content:space-between;align-items: center;
     }
-    .header_top .logo{
+    #header_top .logo{
         background-image: url(../images/mobile_main_logo.png);
         width: 140px;height: 24px;margin: 15px 0;
     }
-    .header_top .logo a{
+    #header_top .logo a{
         text-indent:9999px;display: block;
     }
-    .header_top .gnb{
+    #header_top .gnb{
         position: fixed;width: 100%;height: 100%;
         background-image: url(../images/mo_menu_bg.png);
         background-repeat: no-repeat;
@@ -730,7 +730,7 @@ input[type="text"]{outline: none;}
         top: 0;left: -100%;
         transition: 0.3s;z-index: 1;
     }
-    .header_top .gnb.view{left: 0;}
+    #header_top .gnb.view{left: 0;}
     .gnb .submenu{
         text-align: center;position: absolute;
         top:50%;left: 50%;transform: translate(-50%,-50%);
